# ricci

./: .gitignore  CMakeLists.txt  LICENSE  conanfile.py
.devcontainer/: devcontainer.json
src/ricci/: axioms.hpp  main.test.cpp
src/ricci/axioms/: arithmetic.hpp  arithmetic.test.cpp  associativity.hpp  associativity.test.cpp  closure.hpp  commutativity.hpp  commutativity.test.cpp  distributivity.hpp  identity.hpp  identity.test.cpp  inverse.hpp
src/ricci/concepts/: Expression.hpp  algebra.hpp  std_ext.hpp
src/ricci/core/: operators.hpp
src/ricci/mp/: Member.hpp  receive.hpp
src/ricci/pp/: macro_debugging.hpp
src/ricci/xt/: Constant.hpp  Constant.test.cpp  Expr_Kind.hpp  Expression.fwd.hpp  Expression.hpp  Expression.test.cpp  Operation.hpp  Operation.test.cpp  Placeholder.hpp  Placeholder.test.cpp  Placeholder_2.hpp  Result_Of.hpp  Substitution.hpp  Variable.hpp  evaluate.hpp  operator_for_yap.hpp  operators.hpp  transform.hpp
src/ricci/xt/concepts/: Yap_Expression.hpp
